--- a/sprint_8_proyecto_evaluado.ipynb
+++ b/sprint_8_proyecto_evaluado.ipynb
@@ -4,14 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Paso 4: Análisis exploratorio de datos - Compañias de taxis**"
+    "# **Proyecto 8: Análisis exploratorio de datos - Compañias de taxis**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **4.1 Diccionario de datos**\n",
+    " ## **Descripción del proyecto:**\n",
+    "\n",
+    "En este proyecto se busca realizar un análisis exploratorio de datos (EDA) en el cual se busca identificar los barrios más productivos para las compañías de taxis. El análisis se realiza a partir de la base de datos proporcionada, que contiene información sobre las carreras realizadas por las compañías de taxis en la ciudad de Nueva York."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Diccionario de datos**\n",
     "\n",
     "Además de los datos que recuperaste en las tareas anteriores te han dado un segundo archivo. Ahora tienes estos dos CSV:\n",
     "\n",
@@ -32,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **4.2 Etapas**\n",
+    "## **Etapas**\n",
     "\n",
     "- Importar los archivos\n",
     "- Estudiar los datos que contienen\n",
@@ -47,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **4.3 Objetivo:**\n",
+    "## **Objetivo:**\n",
     "\n",
     "Identificar los barrios mas productivos para las compañias de taxis."
    ]
@@ -56,14 +65,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **4.4 Revisión de las bases de datos**"
+    "## **Revisión de las bases de datos**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **4.4.1 Carga de librerias**"
+    "**Carga de librerias**"
    ]
   },
   {
@@ -101,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **4.4.2 Carga de bases de datos**"
+    "**Carga de bases de datos**"
    ]
   },
   {
@@ -136,14 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **4.4.3 Revisión de los datos**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### **Revisión DataFrame \"compañia_viajes\"**"
+    "### **DataFrame \"compañia_viajes\"**"
    ]
   },
   {
@@ -322,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Revisión DataFrame \"barrios_viajes\"**"
+    "### **DataFrame \"barrios_viajes\"**"
    ]
   },
   {
@@ -496,14 +498,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **4.5 Análisis de las bases de datos**"
+    "## **Análisis de las bases de datos**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **4.5.1 Top 10 barrios en términos de finalización.**"
+    "### **Top 10 barrios en términos de finalización.**"
    ]
   },
   {
@@ -595,7 +597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **4.5.2 Empresas de taxis y número de viajes.**"
+    "### **Empresas de taxis y número de viajes.**"
    ]
   },
   {
@@ -766,14 +768,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Paso 5: Prueba de hipótesis** "
+    "## **Pruebas de hipótesis** "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **5.1 Diccionario de datos**\n",
+    "### **Diccionario de datos**\n",
     "\n",
     "Archivo: project_sql_result_07.csv\n",
     "\n",
@@ -791,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **5.2 Análisis de la base de datos**"
+    "### **Análisis de la base de datos**"
    ]
   },
   {
@@ -878,15 +880,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **5.3 Prueba de hipótesis**"
+    "### **Prueba de hipótesis**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **5.3.1 Definición de hipótesis nula e hipótesis alternativa**\n",
-    "\n",
     "* **Hipótesis Nula:** \"La duración promedio de los viajes desde el Loop hasta el Aeropuerto Internacional O'Hare **NO** cambia los sábados lluviosos\".\n",
     "\n",
     "* **Hipótesis alternativa:** \"La duración promedio de los viajes desde el Loop hasta el Aeropuerto Internacional O'Hare **CAMBIA** los sábados lluviosos\".\n",
@@ -1176,7 +1176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **CONCLUSIONES**\n",
+    "## **Conclusiones generales**\n",
     "\n",
     "- Es probable que los viajes de sábados con lluvia duren más que en los sábados sin lluvia.\n",
     "- Los viajes en sábado lluvioso duran en promedio 2,427 segundos (40.4 minutos).\n",
